<resources>
    <string name="app_name">AutoClub</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="login_title_authorization">Авторизация</string>
    <string name="login_title_registration">Регистрация</string>
    <string name="btn_sign_in">Вход</string>
    <string name="btn_create">Создать аккаунт</string>
    <string name="hint_nickname">Имя</string>
    <string name="hint_email">Почта</string>
    <string name="hint_password">Пароль</string>
    <string name="tv_sign_in">Уже есть учетная запись? Войти</string>
    <string name="tv_create">Нет учетной записи? Создать</string>
    <string name="loading">Загрузка…</string>
    <string name="action_join_group">Мои группы</string>
    <string name="action_create_group">Создание группы</string>
    <string name="action_sign_out">Выйти</string>
    <string name="action_pdd">ПДД</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string-array name="pdd">
        <item>1. Общие положения</item>
        <item>2. Общие обязанности водителей</item>
        <item>3. Применение специальных сигналов</item>
        <item>4. Обязанности пешеходов</item>
        <item>5. Обязанности пассажиров</item>
        <item>6. Сигналы светофора и регулировщика</item>
        <item>7. Применение аварийной сигнализации и знака аварийной остановки</item>
        <item>8. Начало движения, маневрирование</item>
        <item>9. Расположение транспортных средств на проезжей части</item>
        <item>10. Скорость движения</item>
        <item>11. Обгон, опережение, встречный разъезд</item>
        <item>12. Остановка и стоянка</item>
        <item>13. Проезд перекрестков</item>
        <item>14. Пешеходные переходы и места остановок маршрутных транспортных средств</item>
        <item>15. Движение через железнодорожные пути</item>
        <item>16. Движение по автомагистралям</item>
        <item>17. Движение в жилых зонах</item>
        <item>18. Приоритет маршрутных транспортных средств</item>
        <item>19. Пользование внешними световыми приборами и звуковыми сигналами</item>
        <item>20. Буксировка механических транспортных средств</item>
        <item>21. Учебная езда</item>
        <item>22. Перевозка людей</item>
        <item>23. Перевозка грузов</item>
        <item>24. Дополнительные требования к движению велосипедистов и водителей мопедов</item>
        <item>25. Дополнительные требования к движению гужевых повозок, а также к прогону животных</item>
    </string-array>
</resources>